fronttableaudenord/deployment-fronttb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-tb
  labels:
    app: front-tb
    type: front
spec:
  selector:
    matchLabels:
      app: front-tb
      type: front
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front-tb    
        type: front
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker2erpnode
      imagePullSecrets:
       - name: regcred
      containers:
        - name: front-tb
          image: 192.168.2.225:5000/fronttableaudebord:1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "1152Mi"
              cpu: "1124m"
            limits:
              memory: "6120Mi"
              cpu: "4046m"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
