fronttableaudenord/service-fronttb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-front-tb 
spec:
  selector:
    app: front-tb
    type: front
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
      name: http-front
      nodePort: 31105
