fronttableaudenord/virtualServiceFrontTB.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fronttbvs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - name: frontmetier-vs
    match:
    - uri:
        prefix: "/#/front-tb"     
    route:
    - destination:
        host: service-front-tb 
        port:
          number: 80
